--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   dio: ^5.8.0+1
   flutter_screenutil: ^5.9.3
   cached_network_image: ^3.4.1
+  infinite_scroll_pagination: ^4.1.0
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
