--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.4.1
   infinite_scroll_pagination: ^4.1.0
   iconsax: ^0.0.8
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
