--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   infinite_scroll_pagination: ^4.1.0
   iconsax: ^0.0.8
   google_fonts: ^6.2.1
+  flutter_bloc: ^9.1.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
