--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_bloc: ^9.1.0
   dartz: ^0.10.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
