--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shimmer: ^3.0.0
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
